made colorswitch fixed on mobile devices

--- a/dev/styles/scss/_standards.scss
+++ b/dev/styles/scss/_standards.scss
@@ -116,6 +116,10 @@ mark {
   overflow: hidden;
 }
 
+.mod_leaflet{
+  z-index: 1;
+}
+
 .invisible {
   border: 0;
   clip: rect(0 0 0 0);
